// COMPILE: protoc --proto_path=services --proto_path=third_party --go_out=plugins=grpc:services account.proto

syntax = "proto3";

package services;

import "google/protobuf/timestamp.proto";

message AccountLoginRequest {
    string email = 1;
    string password = 2;
}

message AccountLoginResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp loginAt = 4;
}

message AccountRegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string passwordConfirmation = 4;
}

message AccountRegisterResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp registerAt = 4;
}

service AccountService {
    rpc Login (AccountLoginRequest) returns (AccountLoginResponse);
    rpc Register (AccountRegisterRequest) returns (AccountRegisterResponse);
}